force-app/main/default/objects/Customer__c/fields/Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Completed_Tasks__c</fullName>
    <label>Completed Tasks</label>
    <summaryFilterItems>
        <field>Onboarding_Task__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Onboarding_Task__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>