force-app/main/default/objects/Customer__c/fields/Total_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks__c</fullName>
    <label>Total Tasks</label>
    <summaryForeignKey>Onboarding_Task__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>