force-app/main/default/objects/Customer__c/listViews/All_Customers_by_Stage.listView-meta.xml
<ListView>
    <fullName>All_Customers_by_Stage</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Industry__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Onboarding_Status__c</columns>
    <columns>Go_Live_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Customers by Stage</label>
</ListView>