force-app/main/default/objects/Customer__c/listViews/My_Customers.listView-meta.xml
<ListView>
    <fullName>My_Customers</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Industry__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Onboarding_Status__c</columns>
    <columns>Go_Live_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Customers</label>
</ListView>